--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^4.18.4",
     "axios": "^0.24.0",
     "gh-pages": "^3.2.3",
     "prop-types": "^15.8.1",
